[package]
name = "MB_RTU_TOKIO"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-macros = "1.5.1"
tokio = { version = "1", features = ["rt", "macros"] }

tokio-serial = "5.4.4"
tokio-modbus = { version = "*", default-features = false, features = ["rtu"] }

num_cpus = {version = "1.16.0"}
chrono = "0.4"
datetime = "0.5.2"

ansi_term = "0.12"

serde_json = {version="1.0.99"}
serde = {version="1.0.99", features=["derive"]}
